[package]
name = "stealth_shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = "0.21.0"

[dependencies.bevy]
version = "0.11.2"
features = ["dynamic_linking"] # Remove this for release

[dependencies.bevy_rapier3d]
version = "0.22.0"
features = ["enhanced-determinism"]


[profile.dev.package."*"] 
opt-level = 3
